--- a/IDEA_ChatTut/IDEA_ChatTut/Base.lproj/Main.storyboard
+++ b/IDEA_ChatTut/IDEA_ChatTut/Base.lproj/Main.storyboard
@@ -96,6 +96,7 @@
                     <navigationItem key="navigationItem" id="Kfj-0c-E4o"/>
                     <connections>
                         <outlet property="emailTF" destination="SGl-71-72Y" id="jqQ-LC-xrs"/>
+                        <outlet property="mySegment" destination="XK5-12-MvK" id="C6C-P1-ntZ"/>
                         <outlet property="passwordTF" destination="xCi-cJ-sQk" id="81W-sB-qi8"/>
                         <outlet property="submitButton" destination="gzJ-LS-0r8" id="ks2-Kx-Okp"/>
                         <outlet property="usernameTF" destination="Who-Om-UsB" id="VaJ-pT-c51"/>
@@ -113,36 +114,121 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Uy-uo-ure">
-                                <rect key="frame" x="166.5" y="323" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBt-Af-IvB">
-                                <rect key="frame" x="312" y="40" width="48" height="30"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VOJ-Og-mUV">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="71" id="dkz-Fh-4le" customClass="RoomNameCell" customModule="IDEA_ChatTut" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="71"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dkz-Fh-4le" id="uWT-HI-c4T">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqk-Et-g0G">
+                                                    <rect key="frame" x="35" y="31" width="305" height="49"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tqk-Et-g0G" firstAttribute="top" secondItem="uWT-HI-c4T" secondAttribute="topMargin" constant="20" id="95y-Lu-UCf"/>
+                                                <constraint firstItem="tqk-Et-g0G" firstAttribute="bottom" secondItem="uWT-HI-c4T" secondAttribute="bottomMargin" constant="20" id="FFw-kY-cQq"/>
+                                                <constraint firstItem="tqk-Et-g0G" firstAttribute="leading" secondItem="uWT-HI-c4T" secondAttribute="leadingMargin" constant="20" id="nqP-8U-uTM"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="tqk-Et-g0G" secondAttribute="trailing" constant="20" id="ntR-KT-nbf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="roomName" destination="tqk-Et-g0G" id="7dc-XA-4d8"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VOJ-Og-mUV" firstAttribute="top" secondItem="7LJ-zc-bHu" secondAttribute="top" id="3py-Bd-qCz"/>
+                            <constraint firstItem="7LJ-zc-bHu" firstAttribute="bottom" secondItem="VOJ-Og-mUV" secondAttribute="bottom" id="MJN-9m-Y9H"/>
+                            <constraint firstItem="7LJ-zc-bHu" firstAttribute="trailing" secondItem="VOJ-Og-mUV" secondAttribute="trailing" id="QEl-ji-eBE"/>
+                            <constraint firstItem="VOJ-Og-mUV" firstAttribute="leading" secondItem="7LJ-zc-bHu" secondAttribute="leading" id="zU3-ig-1fP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7LJ-zc-bHu"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="nrt-RS-Mab">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="FFz-Cr-aXR">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BBt-Af-IvB">
+                                <rect key="frame" x="16" y="7" width="48" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
                                     <action selector="logoutPressed:" destination="Pj6-rd-bgF" eventType="touchUpInside" id="RNo-9d-9QA"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="3Uy-uo-ure" firstAttribute="centerX" secondItem="Ayj-er-Ewd" secondAttribute="centerX" id="0kv-go-ows"/>
-                            <constraint firstItem="3Uy-uo-ure" firstAttribute="centerY" secondItem="Ayj-er-Ewd" secondAttribute="centerY" id="a07-Oo-SLD"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="7LJ-zc-bHu"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="nrt-RS-Mab"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nn9-zk-tyr">
+                            <connections>
+                                <action selector="didPressAddChatRoom:" destination="Pj6-rd-bgF" id="qzB-Pm-dO0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="output" destination="3Uy-uo-ure" id="Tbe-dJ-Qz3"/>
+                        <outlet property="myTableView" destination="VOJ-Og-mUV" id="Drw-Ol-fMs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HdK-iD-flw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2852" y="1109.5952023988007"/>
+        </scene>
+        <!--Chat Room View Controller-->
+        <scene sceneID="wl3-hB-dAh">
+            <objects>
+                <viewController storyboardIdentifier="ChatVC" id="b4z-gT-TzA" customClass="ChatRoomViewController" customModule="IDEA_ChatTut" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fQq-57-mUg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bSC-t7-guN">
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E6r-Gd-Auz">
+                                        <rect key="frame" x="8" y="10" width="271" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="liW-QQ-56J">
+                                        <rect key="frame" x="287" y="10" width="80" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="didPressSend:" destination="b4z-gT-TzA" eventType="touchUpInside" id="YV0-aH-L4E"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="zS5-Od-ry6"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bSC-t7-guN" firstAttribute="leading" secondItem="61O-4L-C6a" secondAttribute="leading" id="bfi-Uj-mcN"/>
+                            <constraint firstItem="bSC-t7-guN" firstAttribute="bottom" secondItem="61O-4L-C6a" secondAttribute="bottom" id="kZV-zM-8z2"/>
+                            <constraint firstItem="61O-4L-C6a" firstAttribute="trailing" secondItem="bSC-t7-guN" secondAttribute="trailing" id="sFa-AV-F8v"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="61O-4L-C6a"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="dataTF" destination="E6r-Gd-Auz" id="j0h-qy-INm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jI5-Oj-yaB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3554.4000000000001" y="1109.5952023988007"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JoB-GC-f5Z">
